Fix css to remove object inspector horizontal scrollbar

--- a/css/object_inspector.css
+++ b/css/object_inspector.css
@@ -79,7 +79,7 @@
   background: none;
   margin: 0;
   padding: 0;
-  width: 20px;
+  width: 23px;
   opacity: 1;
 }
 
